Bug 1770540 - Add toJSON() to calDateTime api for better stringifying. r=thunderbird-reviewers,darktrojan

Differential Revision: https://phabricator.services.mozilla.com/D146983

--HG--
extra : moz-landing-system : lando